--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ function render(){
       </div>
       <div id="parentArea"></div>
       <div style="text-align:center; margin-bottom:10px;">
-        <button class="btn-parent-input" onclick="openParent('${r.id}')">부모 의견 입력</button>
+        <button class="btn-parent-input" onclick="openParent('${r.id}')">부모 의견 수정</button>
       </div>
       <div class="btn-row"><button class="gray" onclick="navigate({page:'list'})">목록</button><button class="red" onclick="askDelete('${r.dbId}')">삭제</button></div>`;
   }
@@ -275,7 +275,7 @@ function renderCalendarView(container) {
     const lastDate = new Date(year, month + 1, 0).getDate();
     let html = `<div class="cal-wrapper" id="calTouchArea">
         <div class="cal-header"><button class="gray small" onclick="changeMonth(-1)">◀</button><b style="font-size:20px;">${year}년 ${month + 1}월</b><button class="gray small" onclick="changeMonth(1)">▶</button></div>
-        <div class="cal-grid"><div class="cal-day-label sun">일</div><div class="cal-day-label">월</div><div class="cal-day-label">화</div><div class="cal-day-label">수</div><div class="cal-day-label">목</div><div class="cal-day-label">금</div><div class="cal-day-label sat">토</div>`;
+        <div class="cal-grid"><div class="cal-day-label sun">일</div><div class="cal-day-label">월</div><div class="cal-day-label">화</div><div class="cal-day-label">수</div><div class="cal-day-label">목</div><div class="cal-day-label금</div><div class="cal-day-label sat">토</div>`;
     for(let i=0; i<firstDay; i++) html += `<div class="cal-day other"></div>`;
     for(let d=1; d<=lastDate; d++) {
         const dateKey = `${year}-${String(month+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
@@ -327,7 +327,6 @@ function badge(s){ return `<span class="badge ${s==='찬성'?'ok':(s==='반대'?
 function transKo(v){ return v === "approve" ? "찬성" : (v === "reject" ? "반대" : "대기"); }
 function renderLog(name, res, comm, time) { const icon = res === 'approve' ? '✅' : (res === 'reject' ? '❌' : '⏳'); return `<div style="margin-bottom:15px;"><b>${name}: ${icon} ${transKo(res)} ${time ? '/ '+time : ''}</b><br><div style="margin-top:8px; padding-left:10px; color:#555;">의견: ${esc(comm || "-")}</div></div>`; }
 
-// 1. 아이의 의견 수정 시 문자 발송 기능 반영
 function toggleEdit(dbId) {
     const btn = document.getElementById("btnEditMain");
     if(btn.innerText !== "저장") { 
@@ -364,7 +363,6 @@ function askDelete(dbId){
 }
 function authDelete(dbId){ if(document.getElementById("delPw").value === PASSWORD){ db.ref("approvals/"+dbId).remove().then(() => { navigate({page:'list'}); document.getElementById("pwModal").style.display="none"; }); } else { alert("비밀번호가 틀렸습니다."); } }
 
-// 2. 부모 의견 수정 기능 반영 (기존 의견 로드 및 수정 프로세스)
 function openParent(id){
   const m = document.getElementById("pwModal"); m.style.display="flex";
   m.innerHTML=`<div class="card" style="text-align:center;"><b>부모 인증</b><input id="pw" type="password" placeholder="비밀번호"><div class="btn-row"><button class="fit" onclick="authParent('${id}')">확인</button><button class="fit gray" onclick="document.getElementById('pwModal').style.display='none'">닫기</button></div></div>`;
@@ -375,14 +373,13 @@ function authParent(id){
   document.getElementById("pwModal").style.display="none";
   const r = allData.find(x=>String(x.id)===String(id)); 
   let h = "";
-  // 기존 의견이 있으면 밸류값으로 넣어줌
   const momVal = r.momC || tempParentInput.momC;
   const dadVal = r.dadC || tempParentInput.dadC;
   
-  h += `<div class="card"><b>엄마 의견 (수정가능)</b><textarea id="momC" rows="3" oninput="tempParentInput.momC=this.value">${momVal}</textarea>
-        <div style="text-align:left; margin-top:10px;"><button class="fit green" onclick="confirmDecide('${r.dbId}','mom','approve','${r.title}', '${r.cost}', true)">수정 찬성</button><button class="fit red" onclick="confirmDecide('${r.dbId}','mom','reject','${r.title}', '${r.cost}', true)">수정 반대</button></div></div>`;
-  h += `<div class="card"><b>아빠 의견 (수정가능)</b><textarea id="dadC" rows="3" oninput="tempParentInput.dadC=this.value">${dadVal}</textarea>
-        <div style="text-align:left; margin-top:10px;"><button class="fit green" onclick="confirmDecide('${r.dbId}','dad','approve','${r.title}', '${r.cost}', true)">수정 찬성</button><button class="fit red" onclick="confirmDecide('${r.dbId}','dad','reject','${r.title}', '${r.cost}', true)">수정 반대</button></div></div>`;
+  h += `<div class="card"><b>엄마 의견</b><textarea id="momC" rows="3" oninput="tempParentInput.momC=this.value">${momVal}</textarea>
+        <div style="text-align:left; margin-top:10px;"><button class="fit green" onclick="confirmDecide('${r.dbId}','mom','approve','${r.title}', '${r.cost}', true)">찬성</button><button class="fit red" onclick="confirmDecide('${r.dbId}','mom','reject','${r.title}', '${r.cost}', true)">반대</button></div></div>`;
+  h += `<div class="card"><b>아빠 의견</b><textarea id="dadC" rows="3" oninput="tempParentInput.dadC=this.value">${dadVal}</textarea>
+        <div style="text-align:left; margin-top:10px;"><button class="fit green" onclick="confirmDecide('${r.dbId}','dad','approve','${r.title}', '${r.cost}', true)">찬성</button><button class="fit red" onclick="confirmDecide('${r.dbId}','dad','reject','${r.title}', '${r.cost}', true)">반대</button></div></div>`;
   
   document.getElementById("parentArea").innerHTML = h;
 }
@@ -409,7 +406,6 @@ function decide(dbId, who, val, title, cost, isEdit = false){
     
     db.ref("approvals/"+dbId).update({ [who]: val, [who+"C"]: comment, [who+"Time"]: now() }).then(() => {
         const whoKo = (who === 'mom' ? '엄마' : '아빠');
-        // 요청된 문자 내용 반영
         const msg = isEdit ? `[똑똑! 가족 게시판]\n${whoKo} 의견이 수정되었습니다!` : `[똑똑! 가족게시판]\n${whoKo}의 의견이 등록되었습니다`;
         const m = document.getElementById("pwModal");
         m.style.display = "flex";
